kernel/tests/data/invalid/parameter_not_a_type.ck
data Unit : Type where
  | mk : Unit

data Invalid (x : Unit.mk) : Type where